--- a/src/main/resources/templates/front/swift/SwiftFieldInput.mustache
+++ b/src/main/resources/templates/front/swift/SwiftFieldInput.mustache
@@ -60,7 +60,7 @@ HStack {
 
         {{#hasCategory}}
         type{{entity}}Raw = selectedCategory?.typeCategoryRaw ?? ""
-       lastUsedCategoryId = selectedCategory?.remoteId
+       lastUsedCategoryId = selectedCategory?.id
        {{/hasCategory}}
 
 }) {
