--- a/src/main/resources/templates/front/swift/entityListView.mustache
+++ b/src/main/resources/templates/front/swift/entityListView.mustache
@@ -95,7 +95,7 @@ var body: some View {
                         //add notification here
                         if let name = user.name {
                                HStack(spacing: 4) {
-                                 Text(t("Welcome")+" : "+name)
+                                 Text(t("Bienvenue ")+" : "+name)
                                }
                                .font(.subheadline)
                                .padding(.leading)
