--- a/src/main/resources/templates/front/swift/entityListViewModel.mustache
+++ b/src/main/resources/templates/front/swift/entityListViewModel.mustache
@@ -21,6 +21,7 @@ let username: String
 
 {{#header}}
 @Published var current{{headerUpperCase}}Id: String?
+@Published var current{{headerUpperCase}} : {{headerUpperCase}}?
 {{/header}}
 
     @Published var selectedStartDate: Date?
