--- a/src/main/resources/templates/front/swift/entityListView.mustache
+++ b/src/main/resources/templates/front/swift/entityListView.mustache
@@ -54,7 +54,7 @@ var body: some View {
             }
             .onChange(of: selected{{headerUpperCase}}) { acct in
                 viewModel.current{{headerUpperCase}}Id = acct?.id
-                viewModel.selected{{headerUpperCase}} = acct
+
             }
             {{#hasSummary}}
         {{entity}}SummaryView({{entityLowerCase}}s: viewModel.filtered{{entity}}s, defaultCurrency: "")
@@ -215,6 +215,7 @@ var body: some View {
         {{#header}}
        .onChange(of: selected{{headerUpperCase}}) { acct in
             viewModel.current{{headerUpperCase}}Id = acct?.id
+            viewModel.current{{headerUpperCase}} = acct
             lastUsed{{headerUpperCase}}Id = acct?.id
 
             viewModel.fetchEntities()
